# nexus-equitygraph

./: .gitignore  LICENSE  PERSONAS.md  README.md  main.py  pyproject.toml
src/nexus_equitygraph/: __init__.py  __version__.py  graph_runner.py  workflow.py
src/nexus_equitygraph/agents/: __init__.py  base.py  fundamentalist.py  quantitative.py  reviewer.py  risk_manager.py  sentiment.py  supervisor.py
src/nexus_equitygraph/agents/prompts/: fundamentalist.toml  quantitative.toml  reviewer.toml  risk_manager.toml  sentiment.toml  supervisor.toml
src/nexus_equitygraph/agents/templates/: report_template.md
src/nexus_equitygraph/core/: __init__.py  cache.py  configs.py  exceptions.py  formatters.py  http_client.py  prompt_manager.py  providers.py  settings.py  text_utils.py  tools.py
src/nexus_equitygraph/domain/: schemas.py  state.py
src/nexus_equitygraph/services/: __init__.py  cvm_client.py  cvm_mapper.py  cvm_parser.py  cvm_registry.py  market_resolver.py  news_search.py
src/nexus_equitygraph/tools/: financial_tools.py  helpers.py  indicator_tools.py  market_tools.py  math_tools.py  news_tools.py
tests/: conftest.py
tests/core/: test_cache.py  test_configs.py  test_formatters.py  test_http_client.py  test_prompt_manager.py  test_providers.py  test_settings.py  test_text_utils.py  test_tools.py
tests/domain/: test_state.py
tests/services/: test_cvm_client.py  test_cvm_mapper.py  test_cvm_parser.py  test_cvm_registry.py  test_market_resolver.py  test_news_search.py
tests/smoke/: test_connectivity.py  test_fundamentalist.py  test_quantitative.py  test_reviewer.py  test_risk_manager.py  test_sentiment.py
tests/tools/: test_financial_tools.py  test_helpers.py  test_indicator_tools.py  test_market_tools.py  test_math_tools.py  test_news_tools.py
