[project]
name = "nexus-equitygraph"
version = "0.0.1"
description = "Autonomous Agents Ecosystem for Brazilian Stock Analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "finance",
    "investment",
    "equity-research",
    "automation",
    "artificial-intelligence",
    "multi-agent",
    "langgraph",
    "langchain",
    "nlp",
    "quantitative-analysis",
    "cvm",
    "b3",
]
dependencies = [
    "ddgs",
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langchain-ollama",
    "langgraph",
    "loguru",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "trafilatura",
    "yfinance",
]
[project.urls]
Repository = "https://github.com/alexcamargos/nexus-equitygraph"
Issues = "https://github.com/alexcamargos/nexus-equitygraph/issues"

[dependency-groups]
dev = [
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_equitygraph"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=nexus_equitygraph --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
skip-string-normalization = true
